# local-serve

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yaml
.github/workflows/: dependabot.yaml  release.yaml  tests.yaml
src/: main.rs
