[package]
name = "local-serve"
version = "0.1.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/kainlite/local-serve"
description = "A simple file share over HTTP"
categories = ["command-line-utilities"]
keywords = ["file-server", "http", "webserver", "network-programming"]

[dependencies]
axum = "0.8.5"
tokio = { version = "1.47", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
mime_guess = "2.0"
headers = "0.4"
